# Forvie

./: LICENSE  README  forvie.cabal
benchmarks/parse-foveran/: Display.hs  GetTimings.hs  Grammar.hs  Identifier.hs  LexicalSpec.hs  Main.hs  Parsing.hs  Token.hs  build-profiling  build-timings-benchmark
elisp/: lexing.el  mode-template.el
src/Control/: FiniteStateMachine.hs  StreamProcessor.hs
src/Control/StreamProcessor/: Binary.hs  ByteString.hs  IO.hs  UTF8.hs
src/Data/: BooleanAlgebra.hs  CharSet.hs  CharacterSet.hs  DFA.hs  FiniteStateMachine.hs  Knot.hs  MonadicStream.hs  NFA.hs  RangeSet.hs  Regexp.hs  SExpr.hs  ThompsonAbstractMachine.hs  TypedMap.hs  TypedSet.hs
src/Data/DFA/: Elisp.hs  TH.hs
src/Data/FiniteStateMachine/: Deterministic.hs  Nondeterministic.hs  RegexpDerivatives.hs  ThompsonAbstractMachine.hs
src/Data/FiniteStateMachine/Deterministic/: Elisp.hs  TH.hs
src/Data/MonadicStream/: Binary.hs  Concurrent.hs  IO.hs
src/Data/Type/: Eq.hs  Show.hs
src/Language/Forvie/: Layout.hs
src/Language/Forvie/Editor/: EmacsMode.hs
src/Language/Forvie/Grammar/: ActiveRHS.hs  ContextFree.hs  Example.hs
src/Language/Forvie/Lexing/: ByteString.hs  Error.hs  Generator.hs  Spec.hs  Text.hs
src/Language/Forvie/Parsing/: Arrow.hs  EarleyParser.hs  FGL.hs  Grammar.hs  Monad.hs  ParseMonad.hs  Parser.hs
src/Language/Forvie/SyntaxHighlight/: Elisp.hs  Html.hs
src/Language/Forvie/Util/: Templater.hs
src/Text/: CharacterSet.hs  Layout.hs  Lexeme.hs  Lexer.hs  LexicalSpecification.hs  Position.hs  Regexp.hs  SExpr.hs
src/Text/Regexp/: DFA.hs  DFATH.hs
src/Text/SyntaxHighlight/: Elisp.hs  Html.hs
tests/: Layout.hs  LayoutHUnit.hs  Properties.hs
