Name:                forvie
Version:             0.1
Synopsis:            Some lexing and parsing tools
Description:         Some lexing and parsing tools
License:             BSD3
License-file:        LICENSE
Author:              Robert Atkey
Maintainer:          bob.atkey@gmail.com

Category:            Text

Build-type:          Simple

Extra-source-files:  README.md,
                     tests/Properties.hs,
                     tests/Layout.hs,
                     tests/LayoutHUnit.hs

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.8

data-files:          elisp/mode-template.el

source-repository head
   type:     git
   location: https://github.com/bobatkey/Forvie



Library
  ghc-options:          -Wall -fno-warn-name-shadowing -fno-warn-unused-matches -fno-warn-orphans
  Hs-Source-Dirs:	src
  -- Modules exported by the library.
  Exposed-modules:    	Data.FiniteStateMachine,
                        Data.FiniteStateMachine.Deterministic,
                        Data.FiniteStateMachine.Deterministic.TH,
                        Data.FiniteStateMachine.Deterministic.Elisp,
                        Data.FiniteStateMachine.Nondeterministic,
                        Data.FiniteStateMachine.ThompsonAbstractMachine,
                        Data.FiniteStateMachine.RegexpDerivatives,
                        Data.BooleanAlgebra,                        
                        Text.Lexeme,
                        Text.Position,
                        Language.Forvie.Lexing.Spec,
                        Language.Forvie.Lexing.Text,
                        Language.Forvie.Lexing.ByteString,
                        Language.Forvie.Editor.EmacsMode,
                        Language.Forvie.SyntaxHighlight.Html,
                        Language.Forvie.Layout,
                        Data.CharSet,
                        Data.RangeSet,
                        Data.MonadicStream,
                        Data.MonadicStream.IO,
                        Data.MonadicStream.Binary,
                        Data.SExpr

  -- Packages needed in order to build this package.
  Build-depends:     	template-haskell >= 2.8.0.0,
                        base >= 4,
                        array >= 0.3.0.0,
                        containers >= 0.5.0.0,
                        text >= 0.11.0.8,
                        mtl >= 2.0.1.0,
                        transformers >= 0.2.2.0,
                        bytestring >= 0.10.2.0,
                        pretty >= 1.0.1.1,
                        blaze-html >= 0.4.1.1

  -- Modules not exported by this package.
  Other-modules:        Paths_forvie,
                        Language.Forvie.Util.Templater

Test-suite tests
  Type:                 exitcode-stdio-1.0
  Hs-source-dirs:       tests
  Main-is:              Properties.hs
  Build-depends:        base >= 4.0 && < 5,
                        forvie,
                        test-framework >= 0.8 && < 0.9,
                        test-framework-quickcheck2 >= 0.3 && < 0.4,
                        test-framework-hunit >= 0.3 && < 0.4,
                        QuickCheck >= 2.4.0.1,
                        HUnit >= 1.2.4.2,
                        random >= 1.0.1.1,
                        containers >= 0.5.0.0,
                        bytestring >= 0.10.2.0,
                        text >= 0.11.0.8
  Ghc-options:          -Wall -fno-warn-name-shadowing -fno-warn-unused-matches -fno-warn-orphans
